--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ remote_theme: "mmistakes/minimal-mistakes"
 # 作者信息
 author:
   name: "Inez Fu"
-  bio: "Biotech & pharma investment analysis integrating scientific understanding with financial insight."
+  bio: "Biotech, pharma, AI."
   location: "Sweden"
   links:
     - label: "GitHub"
